Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,28 +28,31 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="framedrop" class="anchor" href="#framedrop" aria-hidden="true"><span class="octicon octicon-link"></span></a>Framedrop?</h3>
+        <h1>
+<a id="framedrop" class="anchor" href="#framedrop" aria-hidden="true"><span class="octicon octicon-link"></span></a>Framedrop?</h1>
 
 <p>In a game, where the challenge is to complete the game, in the lowest of the lowest refresh rates, with random lag spikes and challenging enemies.
 Are you able to take the challenge in your own hands and complete the game?</p>
 
-<h1>
-<a id="what-is-framedrop" class="anchor" href="#what-is-framedrop" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is Framedrop?</h1>
+<h2>
+<a id="what-is-framedrop" class="anchor" href="#what-is-framedrop" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is Framedrop?</h2>
 
-<p>Framedrop is an unique game for people with horriable humor. Framedrop is also an extremely <strike>buggy</strike> feature packed game!</p>
+<p>Framedrop is an unique game for people with horrible humor. Framedrop is also an extremely <strike>buggy</strike> feature packed game!</p>
 
-<h1>
-<a id="framedrop-has-features-like" class="anchor" href="#framedrop-has-features-like" aria-hidden="true"><span class="octicon octicon-link"></span></a>Framedrop has features like:</h1>
+<h2>
+<a id="framedrop-has-features-like" class="anchor" href="#framedrop-has-features-like" aria-hidden="true"><span class="octicon octicon-link"></span></a>Framedrop has features like:</h2>
 
 <ol>
-<li>  Innovative parkour system</li>
-<li>  Bad references and jokes</li>
-<li>  A great soundtrack</li>
+<li>Generated levels</li>
+<li>Guns, a lot of guns</li>
+<li>Achievements (note quite done yet)</li>
+<li>Innovative parkour system</li>
+<li>Bad references and jokes</li>
+<li>A great soundtrack</li>
 </ol>
 
-<h1>
-<a id="made-by-who" class="anchor" href="#made-by-who" aria-hidden="true"><span class="octicon octicon-link"></span></a>Made by who?</h1>
+<h2>
+<a id="made-by-who" class="anchor" href="#made-by-who" aria-hidden="true"><span class="octicon octicon-link"></span></a>Made by who?</h2>
 
 <ul>
 <li><a href="https://github.com/uykh" class="user-mention">@uykh</a></li>
