Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@ Are you able to take the challenge in your own hands and complete the game?</p>
 <li><a href="https://github.com/muninjr" class="user-mention">@muninjr</a></li>
 <li><a href="https://github.com/mads256c" class="user-mention">@mads256c</a></li>
 </ul>
+
+<h2>
+<a id="resetting-to-newest-commit-git" class="anchor" href="#resetting-to-newest-commit-git" aria-hidden="true"><span class="octicon octicon-link"></span></a>Resetting to newest commit (git)</h2>
+
+<p><code>git fetch origin
+git reset --hard origin/master
+git clean -f</code></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/mads256c">mads256c</a></p>
