--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
     <title>Framedrop by mads256c</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
+
+    <header>
+      <div class="container">
         <h1>Framedrop</h1>
-        <p>A game about losing your framerate the longer you go into the level</p>
+        <h2>A game about losing your framerate the longer you go into the level</h2>
 
-        <p class="view"><a href="https://github.com/mads256c/FrameDrop">View the Project on GitHub <small>mads256c/FrameDrop</small></a></p>
+        <section id="downloads">
+          <a href="https://github.com/mads256c/FrameDrop/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/mads256c/FrameDrop/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/mads256c/FrameDrop" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-
-        <ul>
-          <li><a href="https://github.com/mads256c/FrameDrop/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/mads256c/FrameDrop/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/mads256c/FrameDrop">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+    <div class="container">
+      <section id="main_content">
         <h1>
 <a id="framedrop" class="anchor" href="#framedrop" aria-hidden="true"><span class="octicon octicon-link"></span></a>Framedrop?</h1>
 
-<p>In a game, where the challenge is to complete the game, in the lowest of the lowest refresh rates, with random lag spikes and challenging enemies.
-Are you able to take the challenge in your own hands and complete the game?</p>
+<p>In a game where the challenge, is to complete the game in the lowest of refresh-rates, with random lag-spikes and challenging enemies.
+Are you able to take the challenge in your own hands, and complete the game?</p>
 
 <h2>
 <a id="what-is-framedrop" class="anchor" href="#what-is-framedrop" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is Framedrop?</h2>
@@ -43,12 +43,15 @@ Are you able to take the challenge in your own hands and complete the game?</p>
 <a id="framedrop-has-features-like" class="anchor" href="#framedrop-has-features-like" aria-hidden="true"><span class="octicon octicon-link"></span></a>Framedrop has features like:</h2>
 
 <ol>
+<li>Lag-spikes (lots of them)</li>
+<li>Low refresh-rates</li>
 <li>Generated levels</li>
 <li>Guns, a lot of guns</li>
 <li>Achievements (note quite done yet)</li>
 <li>Innovative parkour system</li>
 <li>Bad references and jokes</li>
 <li>A great soundtrack</li>
+<li>Gaben</li>
 </ol>
 
 <h2>
@@ -64,17 +67,16 @@ Are you able to take the challenge in your own hands and complete the game?</p>
 <h2>
 <a id="resetting-to-newest-commit-git" class="anchor" href="#resetting-to-newest-commit-git" aria-hidden="true"><span class="octicon octicon-link"></span></a>Resetting to newest commit (git)</h2>
 
+<p>Insert per line:</p>
+
 <pre><code>git fetch origin
 git reset --hard origin/master
 git clean -f
+echo "Gabe horn"
 </code></pre>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/mads256c">mads256c</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
   </body>
 </html>
